# COVID-19-Dashboard-for-the-Netherlands

./: .dockerignore  .gitignore  AWS_QUICK_START.md  Dockerfile  PROJECT_SUMMARY.md  Procfile  README.md  README_DEPLOYMENT.md  app.py  build_and_push.sh  covid-dashboard-nl.py  covid-dashboard@.service  covid_dashboard_nl.py  deploy.sh  deps.txt  docker-compose.yml  docker-run.sh  pyproject.toml  requirements.in  requirements.txt  start.sh  update_data.py
.ebextensions/: 01_packages.config  02_python.config
.github/workflows/: dashboard-2.0_covid-dashboard-nl.yml  deploy.yml
assets/: stylesheet.css
data/: Netherlands_population.csv
installation_files/: covid-dashboard-filewatcher.path  covid-dashboard-filewatcher.service  covid-dashboard@.service
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
