[project]
name = "covid-dashboard-nl"
version = "1.0.0"
description = "COVID-19 Dashboard for the Netherlands"
requires-python = ">=3.12"
dependencies = [
    "dash",
    "dash-core-components",
    "dash-html-components",
    "dash-table",
    "flask",
    "pandas",
    "plotly",
    "pytz",
    "requests",
    "gunicorn",
]

[tool.uv]
dev-dependencies = []